tests/xml/invalidxml/obsTime/badtime4.xml.README
badtime4.xml: BAD because obsTime has month 13, which is out of range
